Signed-off-by: CachorroC <juankpato87@gmail.com>
 Please enter the commit message for your changes. Lines starting
 with '' will be ignored, and an empty message aborts the commit.

 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	modified:   Dockerfile
	modified:   docker-compose.yaml
	modified:   next.config.ts
	new file:   public/20240307_104327.mp4
	new file:   public/20250107_071400.jpg
	modified:   src/app/articulos/nuevo/article-form.tsx
	modified:   src/app/articulos/page.tsx
	new file:   src/app/articulos/vicacha/page.tsx
	new file:   src/app/context/articles-context.tsx
	modified:   src/app/layout.tsx
	modified:   src/app/page.tsx
	modified:   src/components/Navbar.tsx
	modified:   src/components/NewsList.tsx
	new file:   src/components/PostCard.tsx
	new file:   src/components/video/styles.module.css
	new file:   src/components/video/styles.module.css.d.ts
	new file:   src/components/video/styles.module.scss
	new file:   src/components/video/video-component.tsx
	new file:   src/components/video/videoPlayer.tsx
	new file:   src/styles/home.module.css
	new file:   src/styles/home.module.css.d.ts
	new file:   src/styles/home.module.scss
	modified:   src/styles/layout.module.css
	modified:   src/styles/layout.module.scss
	new file:   src/styles/postcard.module.css
	new file:   src/styles/postcard.module.css.d.ts
	new file:   src/styles/postcard.module.scss
	modified:   src/styles/typography.module.css
	modified:   src/styles/typography.module.scss

--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -202,12 +202,13 @@
 }
 .link > .icon, .linkOpen > .icon, .linkOpenActive > .icon, .linkActive > .icon {
   text-align: center;
-  color: var(--on-surface-variant);
+  color: var(--on-surface);
+  width: 3.5rem;
+  padding: 0.2rem 0;
 }
 .link > .text, .linkOpen > .text, .linkOpenActive > .text, .linkActive > .text {
   opacity: 1;
-  font-size: 0.7rem;
-  font-variation-settings: "wght" 500;
+  font-size: var(--label-medium-font-size);
   font-style: var(--label-medium-font-family-style);
   font-weight: var(--label-medium-font-weight);
   color: var(--on-surface-variant);
@@ -251,11 +252,7 @@
   color: var(--on-secondary-container);
 }
 .linkOpenActive > .icon {
-  width: 3.5rem;
-  border-radius: 1rem;
-  padding: 0.2rem 0;
   color: var(--on-secondary-container);
-  box-sizing: b;
 }
 .link:hover > .text, .linkActive:hover > .text, .linkOpen:hover > .text, .linkOpenActive:hover > .text, .link:focus > .text, .linkActive:focus > .text, .linkOpen:focus > .text, .linkOpenActive:focus > .text, .link:active > .text, .linkActive:active > .text, .linkOpen:active > .text, .linkOpenActive:active > .text {
   opacity: 1;
