--- a/src/styles/typography.module.css
+++ b/src/styles/typography.module.css
@@ -78,6 +78,7 @@
   line-height: var(--body-medium-line-height);
   text-transform: var(--body-medium-text-transform);
   text-decoration: var(--body-medium-text-decoration);
+  text-align: justify;
 }
 
 .bodySmall {
